--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<title>APOGEE 16 INTRO</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<!-- <link href='https://fonts.googleapis.com/css?family=Roboto:700' rel='stylesheet' type='text/css'> -->
+	<link href='https://fonts.googleapis.com/css?family=Roboto:700' rel='stylesheet' type='text/css'>
 	<script type="text/javascript" src="js/jquery.min(1.11.1).js"></script>
-	<!-- // <script src="https://maps.googleapis.com/maps/api/js"></script>  -->
-	<!-- // <script type="text/javascript" src="js/customMap.js"></script> -->
+	 <script src="https://maps.googleapis.com/maps/api/js"></script> 
+	<script type="text/javascript" src="js/customMap.js"></script>
 </head>
 <style>
 html,body {
@@ -48,6 +48,7 @@ html,body {
 	text-align: center;
     padding: 15px;
     font-size: 2.5em;
+    display: none;
 }
 
 /*Events*/
@@ -599,42 +600,80 @@ object{
 
 
 /*-----------------------------CONTACTS----------------------------------*/
+#contacts
+{
+	display: block;
+    background-color: #3A474A;
+    color: white;
+    letter-spacing: 1px;
+}
 
 .contactinfo
 {
 	
-	width: 220px;
-	margin: 25px;
+	width: 270px;
+	margin: 30px 50px 30px 50px;
 	position: relative;
 	text-align: center;
 	display: inline-block;
+	vertical-align: top;
+}
+
+@media screen and (max-width: 600px) {
+
+    .contactinfo
+	{
+		margin: 25px;
+	}	
 }
 
 .contactinfo>div:nth-child(1)
 {
 	padding: 5px;
 	text-align: center;
-	font-size: 1em;
+	font-size: 1.3em;
 	font-weight: bold;
 	word-wrap: break-word;
 }
 
-.contactinfo>img
+.contactinfo>div:nth-child(2)>img
 {
-	width: 80%;
-	margin: 2% 10% 2% 10%;
+	width: 210px;
+	height: 210px;
+	margin: 2% 5% 2% 5%;
+	border-radius: 50%;
 }
 
 .contactinfo>div:nth-child(3)
 {
     text-align: center;
-    font-size: 0.8em;
-    line-height: 1.3em;
+    font-size: 0.9em;
+    line-height: 1.4em;
+}
+
+.fb_link
+{
+	position: absolute;
+    bottom: 5%;
+    height: 45px;
+    width: 45px;
+    right: 12%;
+    background-color: #3b5998;
+    -moz-transition: .3s ease-in-out;
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+    border-radius: 50%;
+    padding: 5px;
+    border: 3px solid #fff;
+}
+.fb_link:hover
+{
+	background-color: #fff;
 }
 
 /* Gray Scale */
 
-.contactinfo> img {
+/*.contactinfo div img {
 	-moz-filter: grayscale(100%);
 	-webkit-filter: grayscale(100%) ;
 	filter: grayscale(100%) ;
@@ -642,16 +681,16 @@ object{
 	-webkit-transition: .3s ease-in-out;
 	transition: .3s ease-in-out;
 }
-.contactinfo> img:hover{
+.contactinfo  div img:hover{
 	-moz-filter: grayscale(0);
 	-webkit-filter: grayscale(0);
 	filter: grayscale(0);
 }
-
+*/
 .contact_data
 {
 	text-align: center;
-	max-width: 1100px;
+	max-width: 1200px;
 	left:0;
 	right: 0;
 	margin: auto;
@@ -788,9 +827,9 @@ p.content {
 {
 	position: relative;
 	display: inline-block;
-	margin: 5px;
-	width: 180px;
-    height: 180px;
+	margin: 10px 5px 0px 5px;
+	width: 200px;
+    height: 200px;
     border: 1px solid #ddd;
     background: url("images/sponsback.jpg") no-repeat center center #f9f9f9;
     -moz-transition: all 0.2s ease-in;
@@ -809,8 +848,8 @@ p.content {
 
 .spons_img
 {
-	width: 140px;
-	max-height: 140px;
+	width: 150px;
+	max-height: 150px;
 }
 
 /*--------------------Sponsors End----------------------*/
@@ -1034,7 +1073,7 @@ button:hover
 	</div>
 </div>
 
-<div id="thinkagain" style="background:red;display:block;" class="div_content">
+<div id="thinkagain" style="background:red;" class="div_content">
 	<div class="div_title">TH!NK AGAIN</div>
 	<div class="contact_data">
 		<div class="speaker">
@@ -1192,73 +1231,11 @@ button:hover
 	</div>
 </div>
 
-<div id="contacts" class="div_content">
+<div id="contacts" class="div_content" style="display:block;">
 	<div class="div_title">CONTACTS</div>
 	<div class="div_data">
-		<div class="contact_data">	
-		<div class="contactinfo">
-			<div class="contact_dept">For Correspondence,Registration and Invites</div>
-			<img src="images/phaser.png" class="contact_img" />
-			<div class="contact_det">
-				Shambhavi Mehrotra<br>
-				+91-8290900449<br>
-				shambhavi@bits-bosm.org
-			</div>
-		</div>
-		<div class="contactinfo">
-			<div class="contact_dept">For Correspondence,Registration and Invites</div>
-			<img src="images/phaser.png" class="contact_img" />
-			<div class="contact_det">
-				Shambhavi Mehrotra<br>
-				+91-8290900449<br>
-				shambhavi@bits-bosm.org
-			</div>
-		</div>
-		<div class="contactinfo">
-			<div class="contact_dept">For Correspondence,Registration and Invites</div>
-			<img src="images/phaser.png" class="contact_img" />
-			<div class="contact_det">
-				Shambhavi Mehrotra<br>
-				+91-8290900449<br>
-				shambhavi@bits-bosm.org
-			</div>
-		</div>
-		<div class="contactinfo">
-			<div class="contact_dept">For Correspondence,Registration and Invites</div>
-			<img src="images/phaser.png" class="contact_img" />
-			<div class="contact_det">
-				Shambhavi Mehrotra<br>
-				+91-8290900449<br>
-				shambhavi@bits-bosm.org
-			</div>
-		</div>
-		<div class="contactinfo">
-			<div class="contact_dept">For Correspondence,Registration and Invites</div>
-			<img src="images/phaser.png" class="contact_img" />
-			<div class="contact_det">
-				Shambhavi Mehrotra<br>
-				+91-8290900449<br>
-				shambhavi@bits-bosm.org
-			</div>
-		</div>
-		<div class="contactinfo">
-			<div class="contact_dept">For Correspondence,Registration and Invites</div>
-			<img src="images/phaser.png" class="contact_img" />
-			<div class="contact_det">
-				Shambhavi Mehrotra<br>
-				+91-8290900449<br>
-				shambhavi@bits-bosm.org
-			</div>
-		</div>
-		<div class="contactinfo">
-			<div class="contact_dept">For Correspondence,Registration and Invites</div>
-			<img src="images/phaser.png" class="contact_img" />
-			<div class="contact_det">
-				Shambhavi Mehrotra<br>
-				+91-8290900449<br>
-				shambhavi@bits-bosm.org
-			</div>
-		</div>	
+		<div class="contact_data" id="c_data">	
+			
 		</div>
 		<div id='map'>
 			
@@ -1616,6 +1593,95 @@ function sponsload()
 	$('#sponsdata').html(dt);
 }
 sponsload();
+
+ var contacts_data = 
+ [
+	{
+		dept:'President',
+		img_url:'images/contacts/prez.jpg',
+		fb_link:'https://www.facebook.com/akhil.reddy.148',
+		cname:'Akhil Reddy',
+		phone:'+91-7728835792',
+		email:'president[at]pilani.bits-pilani.ac.in',
+	},
+	{
+		dept:'General Secretary',
+		img_url:'images/contacts/gen.jpg',
+		fb_link:'https://www.facebook.com/profile.php?id=100001257596047',
+		cname:'Rijul Dutta',
+		phone:'+91-8427686647',
+		email:'gensec[at]pilani.bits-pilani.ac.in',
+	},
+	{
+		dept:'For sponsorship and marketing',
+		img_url:'images/contacts/spons.jpg',
+		fb_link:'https://www.facebook.com/mohammed.motiwala1',
+		cname:'Mohammed Motiwala',
+		phone:'+91-7728086752',
+		email:'sponsorship[at]bits-apogee[dot]org',
+	},
+	{
+		dept:'For reception and accommodation',
+		img_url:'images/contacts/recnacc.jpg',
+		fb_link:'https://www.facebook.com/profile.php?id=1536776149',
+		cname:'Aditya Gogri',
+		phone:'+91-9772229698',
+		email:'recnacc[at]bits-apogee[dot]org',
+	},
+	{
+		dept:'For invites and correspondence',
+		img_url:'images/contacts/pcr.jpg',
+		fb_link:'https://www.facebook.com/profile.php?id=100006361090120',
+		cname:'Aditya Chauhan',
+		phone:'+91-8239822574',
+		email:'pcr[at]bits-apogee[dot]org',
+	},
+	{
+		dept:'For Publicity and Online Partnership',
+		img_url:'images/contacts/adp.jpg',
+		fb_link:'https://www.facebook.com/kunal.barapatre.31',
+		cname:'Kunal Barapatre',
+		phone:'+91-7728095594',
+		email:'adp[at]bits-apogee[dot]org',
+	},
+	{
+		dept:'For projects, events and registration',
+		img_url:'images/contacts/controls.jpg',
+		fb_link:'https://www.facebook.com/profile.php?id=100006059280033',
+		cname:'Falguni Agarwal',
+		phone:'+91-9928089204',
+		email:'controls[at]bits-apogee[dot]org',
+	},
+	{
+		dept:'For paper presentations',
+		img_url:'images/contacts/pep.jpg',
+		fb_link:'https://www.facebook.com/profile.php?id=100000505306972',
+		cname:'Aditya V. kumar',
+		phone:'+91-8385857855, +91-8058722661',
+		email:'pep[at]bits-apogee[dot]org, guestlectures[at]bits-apogee[dot]org',
+	},
+	{
+		dept:'For website and other technical queries',
+		img_url:'images/contacts/dvm.jpg',
+		fb_link:'https://www.facebook.com/pranjalONfb',
+		cname:'Pranjal Gupta',
+		phone:'+91-8094076999',
+		email:'webmaster[at]bits-apogee[dot]org',
+	}
+ ];
+
+ function contactsload()
+{
+	var dt="";
+	for(i=0;i<contacts_data.length;++i)
+	{
+		dt+= '<div class="contactinfo"><div class="contact_dept">'+contacts_data[i].dept+'</div><div style="position:relative"><img src="'+ contacts_data[i].img_url+'" class="contact_img" /><a href="'+ contacts_data[i].fb_link +'" target="_blank"><div class="fb_link" ><?xml version="1.0" ?><!DOCTYPE svg  PUBLIC "-//W3C//DTD SVG 1.1//EN"  "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd"><svg enable-background="new 0 0 56.693 56.693" height="30px" id="Layer_1" version="1.1" viewBox="0 0 56.693 56.693" width="30px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><style type="text/css"><![CDATA[svg { cursor: pointer;transition: 200ms;transition-timing-function: ease-in-out;-webkit-transition: 200ms;-webkit-transition-timing-function: ease-in-out;fill:#fff;}svg:hover { fill: #3b5998;}]]></style><path d="M40.43,21.739h-7.645v-5.014c0-1.883,1.248-2.322,2.127-2.322c0.877,0,5.395,0,5.395,0V6.125l-7.43-0.029  c-8.248,0-10.125,6.174-10.125,10.125v5.518h-4.77v8.53h4.77c0,10.947,0,24.137,0,24.137h10.033c0,0,0-13.32,0-24.137h6.77  L40.43,21.739z"/></svg></div></a></div><div class="contact_det">'+contacts_data[i].cname +'<br>'+contacts_data[i].phone +'<br>'+contacts_data[i].email+'</div></div>';
+	}
+
+	$('#c_data').html(dt);
+}
+
+contactsload();
 </script>
 </body>
 </html>
