--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ html,body {
 	min-height: 100vh;
 	text-align: center; 
 	display: none;
+	padding-top: 45px;
 }
 
 .div_title
@@ -177,16 +178,18 @@ html,body {
   font-size: 0;
   text-indent: -9999px;
   appearance: none;
-  box-shadow: none;
+  box-shadow:0 2px 4px rgba(0,0,0,0.4);
   border-radius: none;
   border: none;
   cursor: pointer;
-  transition: background 0.3s;
+  	-moz-transition: all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
 
 .c-hamburger:hover
 {
-	box-shadow: 1px 1px 5px 1px #444;
+	box-shadow: 0 2px 6px rgba(0,0,0,0.5);
 	background: white;
 }
 
@@ -210,9 +213,7 @@ html,body {
 .c-hamburger:hover span
 {
 	width: 60%;
-	-moz-transition: all 0.2s ease-in-out;
-    -webkit-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
+
 }
 
 .c-hamburger span::before,
@@ -238,7 +239,9 @@ html,body {
 }
 
 .c-hamburger--htx span {
-  transition: background 0s 0.3s;
+  	-moz-transition: all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
 
 .c-hamburger--htx span::before,
@@ -326,7 +329,7 @@ object{
 		left:0;
 		top: 0;
 		position: absolute;
-		width: 50vw;
+		width: 100vw;
 		height: 100vh;
 	}
 	#ta_anim
@@ -340,7 +343,7 @@ object{
 	}
 	#fulltransit
 	{
-		left:50vw;
+		left:100vw;
 		top: 0;
 		position: absolute;
 		width: 150vw;
@@ -1236,7 +1239,7 @@ button:hover
 
 <div id="reg" class="div_content" style="display:block;">
 	<div class="div_title">REGISTRATION</div>
-	<div style="text-align:center;margin-top:50px;">
+	<div style="text-align:center;">
 		<div id="regdes">Fill in the form to register for APOGEE 2016 and stay notified with the latest updates.</div>
 		<div id="regform">
 			<form>
@@ -1273,7 +1276,7 @@ button:hover
 
 <div id="spons" class="div_content" >
 	<div class="div_title">SPONSORS</div>
-	<div id="sponsdata" class="contact_data" style="margin-top:40px;">
+	<div id="sponsdata" class="contact_data">
 		
 	</div>
 </div>
@@ -1366,11 +1369,11 @@ function divanim()
 {
 	setTimeout(function(){ 
 		$('#ta_anim').css('display','block');
-		$('#halftransit').animate({'left':'-200vw'},800);
+		$('#halftransit').animate({'left':'-250vw'},800);
 		$('#fulltransit').animate({'left':'-150vw'},800,function(){
 			$('#ta_anim').css('display','none');
 			$('#halftransit').css({'left':'0vw'});
-			$('#fulltransit').css({'left':'50vw'});
+			$('#fulltransit').css({'left':'100vw'});
 		});
 		$(divname[cur_con]).css('display','block');
 	}, 250);
