--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@ html,body {
 	-moz-transition: all 0.7s ease-in-out;
 	-webkit-transition: all 0.7s ease-in-out;
 	transition: all 0.7s ease-in-out;
+	background-color: #f6f6f6;
 }
 .header .head_content{
 	display:none;
