--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ object{
 			position: relative;
     		width: 200px;
     		height: 275px;
-    		margin: 25px;
+    		margin: 10px 25px;
     		cursor: pointer;
     		display: inline-block;
 		}
@@ -1123,7 +1123,9 @@ button:hover
 					<object type="image/svg+xml" data="images/gplus.svg">G+</object>			
 				</div>
 				<div id="facebook">
-					<object type="image/svg+xml" data="images/facebook.svg">f</object>			
+					
+				<object type="image/svg+xml" class="fb_but" data="images/facebook.svg">f</object>	
+				
 				</div>
 				<div id="twitter">
 					<object type="image/svg+xml" data="images/twitter.svg">t</object>			
